@@ -546,8 +546,10 @@ class tx_rtehtmlarea_base extends t3lib_rteapi {
 			}
 			
 				// Loading JavaScript files and code
-			$this->TCEform->additionalCode_pre['loadJSfiles'] = $this->loadJSfiles($this->TCEform->RTEcounter);
-			$this->TCEform->additionalJS_pre['loadJScode'] = $this->loadJScode($this->TCEform->RTEcounter);
+			if ($this->TCEform->RTEcounter == 1) {
+				$this->TCEform->additionalCode_pre['loadJSfiles'] = $this->loadJSfiles($this->TCEform->RTEcounter);
+				$this->TCEform->additionalJS_pre['loadJScode'] = $this->loadJScode($this->TCEform->RTEcounter);
+			}
 
 			/* =======================================
 			 * DRAW THE EDITOR
@@ -854,13 +856,13 @@ class tx_rtehtmlarea_base extends t3lib_rteapi {
 		$loadJavascriptCode = '
 		<script type="text/javascript">
 		/*<![CDATA[*/
-			var i=1;
+			i=1;
 			while (document.getElementById("pleasewait" + i)) {
 				document.getElementById("pleasewait" + i).style.display = "block";
 				document.getElementById("editorWrap" + i).style.visibility = "hidden";
 				i++;
 			};
-			var RTEarea = new Array();
+			RTEarea = new Array();
 			RTEarea[0] = new Object();
 			RTEarea[0]["version"] = "' . $TYPO3_CONF_VARS['EXTCONF'][$this->ID]['version'] . '";
 			RTEarea[0]["popupwin"] = "' . $this->writeTemporaryFile('EXT:' . $this->ID . '/htmlarea/popupwin.js', "popupwin") . '";'
@@ -868,20 +870,20 @@ class tx_rtehtmlarea_base extends t3lib_rteapi {
 			RTEarea[0]["htmlarea-ie"] = "' . $this->writeTemporaryFile('EXT:' . $this->ID . '/htmlarea/htmlarea-ie.js', "htmlarea-ie") . '";')
 			: ('
 			RTEarea[0]["htmlarea-gecko"] = "' . $this->writeTemporaryFile('EXT:' . $this->ID . '/htmlarea/htmlarea-gecko.js', "htmlarea-gecko") . '";')) . '
-			var _editor_url = "' . $this->extHttpPath . 'htmlarea";
-			var _editor_lang = "' . $this->language . '";
-			var _editor_CSS = "' . $this->editorCSS . '";
-			var _editor_skin = "' . dirname($this->editorCSS) . '";
-			var _editor_edited_content_CSS = "' .  $this->editedContentCSS  . '";
-			var _typo3_host_url = "' . $this->hostURL . '";
-			var _editor_debug_mode = ' . ($TYPO3_CONF_VARS['EXTCONF'][$this->ID]['enableDebugMode'] ? 'true' : 'false') . ';
-			var _editor_compressed_scripts = ' . ($TYPO3_CONF_VARS['EXTCONF'][$this->ID]['enableCompressedScripts'] ? 'true' : 'false') . ';'
+			_editor_url = "' . $this->extHttpPath . 'htmlarea";
+			_editor_lang = "' . $this->language . '";
+			_editor_CSS = "' . $this->editorCSS . '";
+			_editor_skin = "' . dirname($this->editorCSS) . '";
+			_editor_edited_content_CSS = "' .  $this->editedContentCSS  . '";
+			_typo3_host_url = "' . $this->hostURL . '";
+			_editor_debug_mode = ' . ($TYPO3_CONF_VARS['EXTCONF'][$this->ID]['enableDebugMode'] ? 'true' : 'false') . ';
+			_editor_compressed_scripts = ' . ($TYPO3_CONF_VARS['EXTCONF'][$this->ID]['enableCompressedScripts'] ? 'true' : 'false') . ';'
 			. (($this->client['BROWSER'] == 'gecko') ? ('
-			var _editor_mozAllowClipboard_url = "' . ($TYPO3_CONF_VARS['EXTCONF'][$this->ID]['mozAllowClipboardURL'] ? $TYPO3_CONF_VARS['EXTCONF'][$this->ID]['mozAllowClipboardURL'] : '') . '";')
+			_editor_mozAllowClipboard_url = "' . ($TYPO3_CONF_VARS['EXTCONF'][$this->ID]['mozAllowClipboardURL'] ? $TYPO3_CONF_VARS['EXTCONF'][$this->ID]['mozAllowClipboardURL'] : '') . '";')
 			: '') . '
-			var _spellChecker_lang = "' . $this->spellCheckerLanguage . '";
-			var _spellChecker_charset = "' . $this->spellCheckerCharset . '";
-			var _spellChecker_mode = "' . $this->spellCheckerMode . '";
+			_spellChecker_lang = "' . $this->spellCheckerLanguage . '";
+			_spellChecker_charset = "' . $this->spellCheckerCharset . '";
+			_spellChecker_mode = "' . $this->spellCheckerMode . '";
 		/*]]>*/
 		</script>';
 		$loadJavascriptCode .= '
